# simple-paint-sdl2

./: -files  xargs wc -l  README.md  hortlog -s -n  simple-interface-SDL2.sln
help/: sdl-surface-create-sdl2.md
simple-interface-SDL2/: simple-interface-SDL2.vcxproj  simple-interface-SDL2.vcxproj.filters
simple-interface-SDL2/control_elements/: itemList.h  label.cpp  label.h  textField.cpp
simple-interface-SDL2/interface/: Interface.h  Interface_OnEvent.cpp  Interface_OnExecute.cpp  Interface_Render.cpp  Interface_Setup.cpp  color.h
simple-interface-SDL2/primitives/: primitives.cpp  primitives.h
simple-interface-SDL2/string_classes/: Dec_String.cpp  Dec_String.h  String.h
simple-interface-SDL2/viewport/: viewport.cpp  viewport.h  viewport_events.cpp
simple-interface-SDL2/window/: window-class.cpp  window-class.h
simple-paint-sdl2/enc_temp_folder/e56a5218496a78b2c3a62ad7e8e43e/: viewport.cpp
simple-paint-sdl2/simple-interface-SDL2/: main.cpp  simple-interface-SDL2.vcxproj  simple-interface-SDL2.vcxproj.filters
simple-paint-sdl2/simple-interface-SDL2/Editor/: editor.cpp  editor.h  editor_event.cpp
simple-paint-sdl2/simple-interface-SDL2/canvas/: canvas.cpp  canvas.h  canvas_event.cpp
simple-paint-sdl2/simple-interface-SDL2/color_scheme/: color.cpp  color.h
simple-paint-sdl2/simple-interface-SDL2/container/: Container.cpp  Container.h  ContainerVScroll.cpp  ContainerVScroll.h  Container_event.cpp
simple-paint-sdl2/simple-interface-SDL2/control_elements/: HScroll.cpp  HScroll.h  VScroll.cpp  VScroll.h  base_control.cpp  input.h  (+10 more)
simple-paint-sdl2/simple-paint-sdl2/: simple-paint-sdl2.sln
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/: CMakeLists.txt  main.cpp  simple-paint-sdl2.vcxproj  simple-paint-sdl2.vcxproj.filters
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/colors/: color.cpp  color.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/container/: Container.cpp  Container.h  ContainerVScroll.cpp  ContainerVScroll.h  Container_event.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/controls/: Checkbox.cpp  Checkbox.h  DropDown.cpp  DropDown.h  DropWindow.cpp  DropWindow.h  HScroll.cpp  HScroll.h  RadioButton.cpp  RadioButton.h  VScroll.cpp  VScroll.h  _Control.cpp  _Control.h  base_control.h  button.cpp  button.h  button_image.cpp  button_image.h  dropDownList.h  input.cpp  input.h  itemList.cpp  label.cpp  label.h  scale_info.cpp  scale_info.h  scroll.cpp  scroll.h  textField.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/editor/: editor.cpp  editor.h  editor_event.cpp  editor_user_event.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/events/: events.cpp  events.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/layer_viewer/: layer_viewer.cpp  layer_viewer.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/layers_viewer/: layers_viewer.cpp  layers_viewer.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/layers_viewer/layer_view/: layer_view.cpp  layer_view.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/menubar/: menubar.cpp  menubar.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/menubar/menu_item/: menu_item.cpp  menu_item.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/primitives/: primitives.cpp  primitives.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/resources/: resources.cpp  resources.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/styles/: styles.cpp  styles.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/toolbar/: toolbar.cpp  toolbar.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/toolbar/tools/: tool.cpp  tool.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/: viewport — копия.h  viewport.cpp  viewport.h  viewport_events.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/canvas/: canvas.cpp  canvas.h  canvas_event.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/canvas/layers/: layers.cpp  layers.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/canvas/layers/layer/: layer.cpp  layer.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/scrolls/: h_view_scroll.cpp  h_view_scroll.h  v_view_scroll.cpp  v_view_scroll.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/viewport/work_table/: work_table.cpp  work_table.h
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/window/: window.cpp  window.h  window_event.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/window/types/main/: main-window.cpp  main-window.h  main-window_event.cpp  main-window_user_events.cpp
simple-paint-sdl2/simple-paint-sdl2/simple-paint-sdl2/modules/window/types/new_doc/: WindowNeDocument_user_events.cpp  WindowNewDocument.cpp  WindowNewDocument.h  WindowNewDocument_events.cpp
(+39 files in other folders)
